css/style.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap");

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Poppins", sans-serif;
}

.container {
  padding: 0px 50px;
}

body {
  height: 100vh;
  background: oklch(21% 0.006 285.885);
}

.navbar {
  display: flex;
  align-items: center;
  justify-content: space-between;
  height: 80px;
  position: relative;
}

.navbar h2 {
  color: #ffb742;
  font-weight: 600;
}

.navbar ul {
  display: flex;
}

.navbar ul li {
  list-style: none;
}

.navbar ul li a {
  text-decoration: none;
  color: white;
  font-size: 16px;
  margin-right: 25px;
  transition: color 0.3s ease;
}

.navbar ul li:hover a {
  color: #ffb742;
}

.navbar ul li:last-child a {
  margin: 0;
}

#menu-toggle {
  display: none;
}

.navbar .menu-button {
  display: none;
  align-items: center;
  cursor: pointer;
}

.navbar .menu-button svg {
  width: 28px;
  height: 28px;
  stroke: white;
  transition: opacity 0.3s ease, transform 0.3s ease;
  position: absolute;
  right: 1rem;
  top: 1rem;
}

.navbar .menu-button .close {
  opacity: 0;
  transform: rotate(-90deg);
  pointer-events: none;
}

.navbar .menu-button .hamburger {
  opacity: 1;
  transform: rotate(0deg);
}

#menu-toggle:checked + .navbar .menu-button .hamburger {
  opacity: 0;
  transform: rotate(90deg);
  pointer-events: none;
}

#menu-toggle:checked + .navbar .menu-button .close {
  opacity: 1;
  transform: rotate(0deg);
  pointer-events: auto;
}

.side-menu {
  display: none;
}

.main {
  height: 640px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.main h4 {
  font-size: 32px;
  color: #fff;
  font-weight: 600;
}

.main h4 span {
  color: #ffb742;
  text-decoration: underline;
}

.main p.title {
  font-size: 44px;
  font-weight: 600;
  color: #fff;
  margin-top: 8px;
  text-align: center;
}

.main p.subtitle {
  font-size: 16px;
  color: #ccc;
  margin-top: 20px;
}

.main img {
  width: 200px;
  height: 200px;
  margin-top: 100px;
}

.guarantee {
  margin-top: 50px;
  display: flex;
  flex-wrap: nowrap;
  gap: 24px;
}

.guarantee .item {
  background: #292b2e;
  display: flex;
  justify-content: space-between;
  align-items: center;
  height: 120px;
  width: 100%;
  border-radius: 10px;
  padding: 15px 30px;
  border: 1px solid transparent;
  cursor: pointer;
  transition: all 0.3s ease;
  gap: 30px;
}

.guarantee .item:hover {
  border-color: #ffb742;
}

.guarantee .item .icon {
  width: 46px;
  height: 46px;
  background: #fff;
  border-radius: 50%;
  display: flex;
  align-items: center;
  justify-content: center;
  transition: background-color 0.3s ease;
  aspect-ratio: 1;
}

.guarantee .item:hover .icon {
  background-color: #ffb742;
}

.guarantee .item .icon i {
  font-size: 30px;
}

.guarantee .item .info {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.guarantee .item .info h3 {
  color: #ffb742;
  font-size: 28px;
}

.guarantee .item .info p {
  color: #fff;
  font-size: 15px;
  font-weight: 600;
  text-align: center;
}

.guarantee .item > i {
  color: #fff;
  font-size: 30px;
  transition: color 0.3s ease;
}

.guarantee .item:hover > i {
  color: #ffb742;
}

.seperator {
  margin: 50px 0px 30px;
  padding: 10px 20px;
  background: rgba(225, 255, 255, 0.08);
  display: inline-block;
  color: #ffb742;
  border-radius: 12px;
}

.seperator-container {
  display: flex;
}

.about {
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 80px;
}

.about .info h3 {
  color: #fff;
  font-size: 32px;
  font-weight: 600;
  margin-bottom: 20px;
}

.about .info p {
  color: #ccc;
  font-size: 14px;
}

.about .info button {
  margin-top: 30px;
}

.skills {
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 80px;
}

.skills .left .info h3 {
  color: #fff;
  font-size: 32px;
  margin-bottom: 20px;
}

.skills .left .info p {
  color: #ccc;
  font-size: 14px;
}

.skills .left button {
  margin-top: 30px;
}

footer {
  position: relative;
  background: oklch(27.4% 0.006 286.033);
  padding: 80px 50px 80px;
  margin-top: 80px;
}

footer .cols {
  display: flex;
  align-items: start;
  align-items: center;
}

footer .cols .about-col {
  flex: 3;
}

footer .cols .about-col h3 {
  color: #ffb742;
  margin-bottom: 20px;
  font-size: 24px;
}

footer .cols .about-col p {
  color: #ccc;
  font-size: 13px;
}

footer .cols .links-col {
  font-size: 30px;
  display: flex;
  gap: 20px;
}

footer .cols .links-col a {
  color: white;
}

footer .cols .links-col a:hover {
  color: #ffb742;
  transition: color 0.3s ease;
}

@media screen and (max-width: 1366px) {
  .navbar .menu-button {
    display: flex;
    z-index: 1001;
  }

  .side-menu {
    display: block;
    transform: translateX(100%);
    transition: transform 0.3s ease;
    position: fixed;
    top: 0;
    right: 0;
    height: 100vh;
    width: 250px;
    background: oklch(37% 0.013 285.805);
    z-index: 1000;
    padding: 2rem;
  }

  .side-menu ul {
    list-style: none;
    padding: 0;
    margin: 0;
  }

  .side-menu li {
    margin-bottom: 1.5rem;
  }

  .side-menu a {
    color: white;
    text-decoration: none;
    font-size: 1.2rem;
  }

  #menu-toggle:checked ~ .side-menu {
    transform: translateX(0);
  }

  .navbar ul {
    display: none;
  }
}

@media screen and (max-width: 1255px) {
  .guarantee {
    flex-wrap: wrap;
  }

  footer .cols .about-col {
    flex-basis: 50%;
  }

  @media screen and (max-width: 780px) {
    .main h4 {
      font-size: 24px;
    }

    .main p.title {
      font-size: 36px;
    }

    .main p.subtitle {
      font-size: 14px;
    }

    .guarantee .item {
      flex-basis: 100%;
    }

    .about {
      flex-wrap: wrap;
      justify-content: center;
    }
  }

  @media screen and (max-width: 650px) {
    .navbar ul li a {
      font-size: 14px;
    }

    .main {
      margin-top: 50px;
      height: 320px;
      justify-content: start;
    }

    .main p.title {
      font-size: 28px;
    }

    .main p.subtitle {
      font-size: 12px;
    }

    .main img {
      margin-top: 40px;
      width: 150px;
      height: 150px;
    }

    .skills {
      flex-wrap: wrap;
      justify-content: center;
    }

    footer .start {
      top: -8%;
    }

    footer .start p {
      display: none;
    }

    footer .cols .about-col {
      flex-basis: 100%;
      margin-bottom: 40px;
    }

    footer .cols {
      display: flex;
      flex-direction: column;
      align-items: start;
    }
  }

  @media screen and (max-width: 579px) {
    .main {
      height: 100%;
    }
  }

  @media screen and (max-width: 480px) {
    .main p.title {
      font-size: 18px;
    }

    .main p.subtitle {
      font-size: 10px;
    }

    .guarantee .item .info h3 {
      font-size: 20px;
    }

    .guarantee .item .info p {
      font-size: 12px;
    }
  }

  @media screen and (max-width: 430px) {
    .container {
      padding: 0px 24px;
    }
  }

  @media screen and (max-width: 375px) {
    .main p.subtitle {
      text-align: center;
    }
  }
}

